--- a/views/sales3.hbs
+++ b/views/sales3.hbs
@@ -1,14 +1,14 @@
-
 <a type="button" class="btn btn-primary" href="/sales3/add">Add data</a>
 <table class="table table-dark">
   <thead>
     <tr>
       <th scope="col"><i class="fas fa-trash-alt"></i></th>
       <th scope="col">Ajax delete</th>
-      <th scope="col">sid</th>  
+      <th scope="col">sid</th>
       <th scope="col">sales_id</th>
       <th scope="col">name</th>
       <th scope="col">birthday</th>
+      <th scope="col"><i class="fas fa-edit"></i></th>
     </tr>
   </thead>
   <tbody>
@@ -20,35 +20,32 @@
       <td>{{sales_id}}</td>
       <td>{{name}}</td>
       <td>{{birthday}}</td>
+      <td scope="col"><a href="/sales3/edit/{{sid}}"><i class="fas fa-edit"></i></a></td>
     </tr>
     {{/each}}
   </tbody>
 </table>
 
-<style>   
+<style>
   .my-del-icon {
-    color:red;
-    cursor:pointer;
+    color: red;
+    cursor: pointer;
   }
 </style>
 
 <script>
-   function remove_item(sid){
-     if (confirm("Do You make sure to remove"+sid+"of Data ?"))
-     {
-       location.href='/sales3/remove/'+sid;
-     }
-   };
- $('.my-del-icon').click ()=>{
-     var me = $(this);
-     var sid =me.attr('data-sid');
-     if (confirm("Do You make sure to remove"+sid+"of Data ?")){
-       $.get('/sales3/remove2'+sid, function(data) {
-         console.log(data);
-          me.closest('tr').remove();
-       },'json');   
-     }
-   }
+  function remove_item(sid) {
+    if (confirm("Do You make sure to remove" + sid + "of Data ?")) { location.href = '/sales3/remove/' + sid; }
+  };
+  $('.my-del-icon').click(function () {
+    var me = $(this);
+    var sid = me.attr('data-sid');
+    if (confirm("Do You make sure to remove" + sid + "of Data ?")) {
+      $.get('/sales3/remove2/' + sid, function (data) {
+        console.log(data);
+        me.closest('tr').remove();
+      }, 'json');
+    }
+  });
 
-  
 </script>
