--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -16,7 +16,7 @@
           <a class="dropdown-item" href="/sales">Sales</a>
           <a class="dropdown-item" href="/sales2">Sales2</a>
           <a class="dropdown-item" href="/sales3">Sales3</a>
-          <a class="dropdown-item" href="/data01.html">data01</a>
+          <a class="dropdown-item" href="/login">login</a>
           <a class="dropdown-item" href="/try-querystring?a=100&b=abcd&c=中文">try-querystring</a>
           <a class="dropdown-item" href="/try-post-form">try-post-form</a>
           <a class="dropdown-item" href="/try-upload">try-upload</a>
