--- a/views/try-post-form.hbs
+++ b/views/try-post-form.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="text" class="form-control" name="password" id="password">
+            <input type="password" class="form-control" name="password" id="password">
             {{#if password}}
             <small>Last time keyin: {{password}}</small>
             {{/if}}
