--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -34,7 +34,7 @@
       {{#if loginUser}}
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/login" style="color:crimson">{{loginUser}}</a>
+            <a class="nav-link" href="/login" style="color:rgb(220, 20, 60)">{{loginUser}}</a>
           </li>
      
           <li class="nav-item">
